--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,12 @@ pygments: true
 #
 title : Jekyll Bootstrap
 tagline: Site Tagline
-author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+author : Bindi Zhang
+  name : Bindi Zhang
+  email : bindi.zh@gmail.com
+  github : ZBD
+  twitter : Not yet
+  feedburner : Not yet
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
